# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.202 2005/12/04 21:29:34 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added StartupServices screen
  fixed some typos introduced by the CC-to-IP networking code
  only add interface to IP if type is 'dhcp' or 'static'
  StartupServices screen now works
  move StartupServices after ExtraPackages

  3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added CC networking pre-loading to Networking screen

  1 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added DHCP options to CC screen

  28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  rename Client Config screen to Pre-install Config
  list currently loaded modules on the right side of the client config screen
  add scrollbar to module list
  check 'Network already setup' if gentoo.org can be pinged
  clean up loaded module list

  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  wrap text in log and output view
  add vertical scrollbars
  scroll with scrollbars instead of textbuffer iter crap
  scrollbars suck...autoscrolling the old way
  cleanup (still commented) autoscroll code with vadjustment

  26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  move partition debug button to top row so it's always visible
  add bit about installer version to failure message
  spread out filesystem types in key

  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  show mountpoint in partition summary on main screen
  allow partition size less than 1/<width of slider>*<drive size MB>
  fix unalloc->part size
  don't allow MB sizes out of bounds to be entered
  don't let part_size less than min-size be entered

  21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  new paragraph on welcome screen
  help button launches firefox to view handbook
  
  19 Nov 2005; John N. Laliberte <allanonjl@gentoo.org>