@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.202 2005/12/04 21:29:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.203 2005/12/04 23:09:37 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -10,6 +10,7 @@
   only add interface to IP if type is 'dhcp' or 'static'
   StartupServices screen now works
   move StartupServices after ExtraPackages
+  code cleanup for StartupServices
 
   3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added CC networking pre-loading to Networking screen
